--- a/fantasysports.css
+++ b/fantasysports.css
@@ -30,7 +30,7 @@ ul {
 
 }
 
-li {
+nav li {
     margin-bottom: 5px;
     border: 1px solid #007bff;
     padding: 5px;
@@ -124,3 +124,93 @@ form {
     margin: 30px 0;
     max-width: 300px;
 }
+
+.team-card {
+    height: 200px;
+    width: 300px;
+    background-color: #7f7c7c;
+    margin: auto;
+}
+
+.carousel-container {
+    width: 70%;
+    margin: 0 auto;
+
+    position: relative;
+}
+
+.carousel {
+    width: 100%;
+    height: 300px;
+
+    position: relative;
+}
+
+.carousel-item {
+    height: 100%;
+    width: 100%;
+}
+
+.carousel-item div {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    object-position: center;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.carousel-btn {
+    background: transparent;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #007bff;
+    z-index: 1;
+
+    position: absolute;
+    top: 50%;
+
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+}
+
+.carousel-btn.left {
+    left: -2.5rem;
+}
+
+.carousel-btn.right {
+    right: -5.0rem;
+}
+
+.carousel-btn:hover {
+    cursor: pointer;
+    background-color: #333;
+}
+
+.carousel-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 0px;
+}
+
+.nav-item {
+    height: 9px;
+    width: 9px;
+}
+
+
+.team-card h1 {
+    color: #ffff;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 10px;
+}
+
+
+
