--- a/fantasysports.css
+++ b/fantasysports.css
@@ -141,7 +141,7 @@ form {
 
 .carousel {
     width: 100%;
-    height: 300px;
+    height: 400px;
 
     position: relative;
 }
@@ -151,11 +151,9 @@ form {
     width: 100%;
 }
 
-.carousel-item div {
+.carousel-item .team-card {
     height: 100%;
     width: 100%;
-    background-size: cover;
-    background-position: center;
     object-fit: cover;
     object-position: center;
 
@@ -169,14 +167,13 @@ form {
     font-size: 1.2rem;
     font-weight: bold;
     color: #007bff;
-    z-index: 1;
 
     position: absolute;
-    top: 50%;
+    top: 45%;
 
     height: 2rem;
     width: 2rem;
-    border-radius: 50%;
+    border-radius: 25%;
 }
 
 .carousel-btn.left {
@@ -191,17 +188,15 @@ form {
     cursor: pointer;
     background-color: #333;
 }
-
-.carousel-nav {
+ .carousel-nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 0px;
-}
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+} 
 
 .nav-item {
-    height: 9px;
-    width: 9px;
+    opacity: 0.5;
 }
 
 
@@ -211,6 +206,7 @@ form {
     font-size: 20px;
     padding-top: 10px;
 }
+
 
 
 
