--- a/fantasysports.css
+++ b/fantasysports.css
@@ -141,6 +141,12 @@ form {
   width: 100%;
 
   opacity: 0;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  transition: 300ms opacity ease-in-out;
+  transition-delay: 150ms;
 }
 
 .carousel-item.active {
@@ -211,11 +217,14 @@ form {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 40px 1fr 40px;
   justify-items: center;
-  background-color: #777676;
+  background-image: url("./images/colleseum.jpg");
+  /* background-color: #777676; */
+  border-radius: 15px;
 }
 
 .athlete-card {
   grid-row: 2;
+  background-color: #a8a8a8;
   border: #007bff 1px solid;
   border-radius: 10px;
   padding: 10px;
@@ -231,6 +240,10 @@ form {
   background-color: #007bff;
   border-radius: 10%;
   font-weight: bold;
+  /*************  ✨ Codeium Command ⭐  *************/
+  display: block;
+  margin: 0 auto;
+  /******  c595ecdb-d1df-4c52-955d-c259aaefa17b  *******/
 }
 
 .score {
