--- a/fantasysports.css
+++ b/fantasysports.css
@@ -330,3 +330,14 @@ main {
   text-align: center;
   margin: 10px;
 }
+
+.error {
+  background-color: #ff0000;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
+
+.error.hidden {
+  display: none;
+}
